--- a/Cloudweather.Precipitation/Properties/launchSettings.json
+++ b/Cloudweather.Precipitation/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Cloudweather.Precipitation": {
+    "CloudWeather.Precipitation": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:4001;http://localhost:4000",
