--- a/Cloudweather.Report/Properties/launchSettings.json
+++ b/Cloudweather.Report/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Cloudweather.Report": {
+    "CloudWeather.Report": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
