--- a/Cloudweather.Temperature/Properties/launchSettings.json
+++ b/Cloudweather.Temperature/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Cloudweather.Temperature": {
+    "CloudWeather.Temperature": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:3001;http://localhost:3000",
